[package]
name = "polyline_rust"
description = "Crate to encode/decode polylines in \"Encoded Polyline Algorithm Format\"."
license = "MIT"
version = "0.1.0"
authors = ["marinewater <martin@bukovics.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
